...
        android:layout_gravity="center"
        android:backgroundTint="#00FFFFFF"
        android:text="Prime User"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#00FFFFFF"
        android:text="Settings" />

    <Button
        android:id="@+id/btn_recommend"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
...
