...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.633"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startup_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="14dp"
            android:backgroundTint="#1A2561"
            android:text="Signup"
            app:layout_constraintBottom_toTopOf="@+id/startup_guest_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startup_login_btn" />

        <Button
            android:id="@+id/startup_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
...
